--- a/examples/showCases/.gitignore
+++ b/examples/showCases/.gitignore
@@ -1,6 +1,6 @@
 # Ignore everything in this directory
 *
 # Except this file
-!/jordiPowerFlowCopy
-!/jordiCylindricalDomain
+!/jordiPowerFlowCopy/
+!/jordiCylindricalDomain/
 !.gitignore
