fixing gitignore one more time

--- a/examples/showCases/.gitignore
+++ b/examples/showCases/.gitignore
@@ -2,5 +2,7 @@
 *
 # Except this file
 !/jordiPowerFlowCopy/
+!/jordiPowerFlowCopy/**
 !/jordiCylindricalDomain/
+!/jordiCylindricalDomain/**
 !.gitignore
